deploy/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspda
  namespace: aspda
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
  selector:
    app: aspda
