deploy/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aspda-ingress
  namespace: aspda
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
#    nginx.org/client-max-body-size: "10m"
#    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      chunked_transfer_encoding "on";
spec:
  ingressClassName: nginx
  rules:
    - host: <>
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: aspda
                port:
                  number: 80
